--- a/package.json
+++ b/package.json
@@ -25,7 +25,12 @@
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-stage-2": "^6.22.0",
     "babel-register": "^6.22.0",
+    "body-parser": "^1.18.2",
     "dotenv": "^4.0.0",
     "nodemon": "^1.11.0"
+  },
+  "dependencies": {
+    "express": "^4.16.2",
+    "mongoose": "^5.0.6"
   }
 }
